--- a/nunter app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/nunter app/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_by_period_cafeteria"
         android:name="com.kyj.nunterapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_by_period_cafeteria"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_board"
         android:name="com.kyj.nunterapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_board"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
